tests/data/placebo/test_asg_security_group/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "PrefixListIds": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-aa6c90c3"
              }
            ],
            "PrefixListIds": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-5f6c9936",
        "OwnerId": "644160558196",
        "GroupId": "sg-aa6c90c3"
      }
    ],
    "ResponseMetadata": {}
  }
}
